# rs-gfahandlegraph

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
benches/: my_benchmark.rs
src/: gfa.rs  handle.rs  handlegraph.rs  hashgraph.rs  lib.rs  main.rs  mutablehandlegraph.rs  packed.rs  parser.rs  pathgraph.rs  save_file.rs  util.rs
src/gfa/: gfa1.rs  gfa2.rs  orientation.rs  segment_id.rs
src/handlegraph/: error.rs  iter.rs
src/hashgraph/: graph.rs  node.rs  path.rs  to_gfa.rs
src/packed/: paged.rs
src/parser/: error.rs  parse_tag.rs  parser_gfa1.rs  parser_gfa2.rs
src/pathhandlegraph/: embedded_paths.rs  path.rs
src/util/: conversion.rs  dna.rs  gfa_json.rs  gfa_to_gfa2.rs  save_file.rs  serialize_gfa_object.rs  to_file.rs  to_gfa.rs
tests/: test.rs
tests/big_files/: A-3105.gfa2  A-3105.sort.gfa2  DRB1-3123.gfa2  DRB1-3123.sort.gfa2  diatom.gfa2  test.gfa2
tests/gfa1_files/: lil.gfa
tests/gfa2_files/: A-3105.sort.gfa2  DRB1-3123.gfa2  DRB1-3123.sort.gfa2  ditto.gfa2  irl.gfa2  spec_q7.gfa  spec_q7.gfa2
tests/output_files/: file_gfa1.gfa  file_gfa2.gfa2  test.json
tests/output_files/default_path/: bincode_file.txt  converted_hashgraph.gfa  file_graph.gfa  file_graph.gfa2  json_file.json
