[package]
name = "gfahandlegraph"
version = "0.1.0"
authors = ["Matteo Stievano <m.stievano1@campus.unimib.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gfa
lazy_static = "1.4.0"
regex = "1"
bstr = { version = "0.2", features = ["serde1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nom = "5"
bytemuck = { version = "1.4", features = ["derive"] }

# handlegraph
fnv = "1.0"
succinct = "0.5"
rayon = "1.5"
num-traits = "0.2"
num-iter = "0.1"

# util
time = "0.2.22"
log = "0.4.11"

[dev-dependencies]
criterion = "0.3"
quickcheck = "0.9"

[[bench]]
name = "my_benchmark"
harness = false