[package]
name = "gfahandlegraph"
version = "0.4.1"
authors = ["Matteo Stievano <m.stievano1@campus.unimib.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gfa
lazy_static = "1.4.0"
regex = "1.4.2"
bstr = "0.2.14"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"

# handlegraph
fnv = "1.0.7"
succinct = "0.5"
rayon = "1.5.0"

# util
time = "0.2.22"
log = "0.4.11"

[dev-dependencies]
criterion = "0.3"
quickcheck = "0.9"

[[bench]]
name = "my_benchmark"
harness = false