[package]
name = "gfahandlegraph"
version = "0.6.1"
authors = ["Matteo Stievano <m.stievano1@campus.unimib.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gfa
lazy_static = "1.4.0"
regex = "1.4.2"
bstr = "0.2.14"

# handlegraph
fnv = "1.0.7"
succinct = "0.5"
rayon = "1.5.0"

# util
time = "0.2.22"
log = "0.4.11"
serde = { version = "1.0.117", features = ["derive"] }

[dev-dependencies]
criterion = "0.3.3"
quickcheck = "0.9"

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.dev]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.test]
opt-level = 3
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'    # This setting is always ignored.
incremental = true
codegen-units = 256
rpath = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'    # This setting is always ignored.
incremental = false
codegen-units = 16
rpath = false

[profile.dev.build-override]
opt-level = 3
codegen-units = 256

[profile.release.build-override]
opt-level = 3
codegen-units = 256